--- a/component/src/app/app.component.html
+++ b/component/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<div class="panel panel-primary">
+  <div class="panel-heading">展示bootstrap的使用</div>
+  <div class="panel-body">
+    <i class="fa fa-address-book" aria-hidden="true"></i>font-awesome的引用
+  </div>
+</div>
