--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- header -->
-<h1>这里是头</h1>
+<div class="page-header text-center">
+    <h1>Angular Demo <small>by eminoda</small></h1>
+</div>
 <!-- content -->
 <router-outlet></router-outlet>
