--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,18 @@
 <div class="container">
     <ul class="nav nav-tabs">
-        <li role="presentation" routerLinkActive="active"><a routerLink="testComponent">组件Component</a></li>
-        <li role="presentation" routerLinkActive="active"><a routerLink="testForm">表单Form</a></li>
+        <li role="presentation" routerLinkActive="active">
+            <a routerLink="/home/component">组件Component</a>
+        </li>
+        <li role="presentation" routerLinkActive="active">
+            <a routerLink="/home/form">表单Form</a>
+        </li>
         <li role="presentation"><a href="#">服务Service</a></li>
     </ul>
+    <div class="progress">
+        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0"
+            aria-valuemax="100" style="width: 40%">
+            <span class="sr-only">40% Complete (success)</span>
+        </div>
+    </div>
+    <router-outlet></router-outlet>
 </div>
