--- a/src/app/test-component/test-component.component.html
+++ b/src/app/test-component/test-component.component.html
@@ -1,8 +1,6 @@
 <div class="row">
     <div class="list-group col-md-2" style="padding-left: 15px;">
-        <a routerLink="/home/component/template" routerLinkActive="active" class="list-group-item">模板Template</a>
-        <a routerLink="/home/component/life" routerLinkActive="active" class="list-group-item">生命周期LifeCycle</a>
-        <a routerLink="/home/component/communication" routerLinkActive="active" class="list-group-item">组件通信Comm.</a>
+        <left-nav-list [navs]="navs"></left-nav-list>
     </div>
     <div class="col-md-10">
         <router-outlet></router-outlet>
