--- a/src/app/test-component/test-template/test-template.component.html
+++ b/src/app/test-component/test-template/test-template.component.html
@@ -1,8 +1,3 @@
-<div class="panel panel-primary">
-  <div class="panel-heading">
-    <h3 class="panel-title">Panel title</h3>
-  </div>
-  <div class="panel-body">
-    Panel content
-  </div>
-</div>
+<panel-content>
+   卧室里面
+</panel-content>
