--- a/src/app/test-form/test-form.component.html
+++ b/src/app/test-form/test-form.component.html
@@ -1,3 +1,8 @@
-<p>
-  test-form works!
-</p>
+<div class="row">
+  <div class="list-group col-md-2" style="padding-left: 15px;">
+      <left-nav-list [navs]="navs"></left-nav-list>
+  </div>
+  <div class="col-md-10">
+      <router-outlet></router-outlet>
+  </div>
+</div>
