--- a/src/app/test-form/validator-form/validator-form.component.html
+++ b/src/app/test-form/validator-form/validator-form.component.html
@@ -1,3 +1,36 @@
-<p>
-  validator-form works!
-</p>
+<div class="alert alert-success" role="alert">模板表单</div>
+<p>通过模板变量，体现验证</p>
+
+<form class="form-horizontal">
+  <div class="form-group">
+    <label for="username" class="col-sm-2 control-label">用户名</label>
+    <div class="col-sm-10">
+      <input #usernameRef="ngModel" [(ngModel)]="username" required minlength="2" id="username" name="username" type="text" class="form-control"
+        placeholder="用户名">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button class="btn btn-info" (click)="showRef(usernameRef)">usernameRef</button>
+      <div>input验证 {{usernameRef.invalid&&(usernameRef.dirty||usernameRef.touched)}}</div>
+      <div>必输? {{usernameRef.errors&&usernameRef.errors.required}}</div>
+      <div>最小? {{usernameRef.errors&&usernameRef.errors.minlength}}</div>
+    </div>
+  </div>
+</form>
+
+<div class="alert alert-success">响应式表单的验证</div>
+<p>在响应式表单中，真正的源码都在组件类中。我们不应该通过模板上的属性来添加验证器，而应该在组件类中直接把验证器函数添加到表单控件模型上（FormControl）。然后，一旦控件发生了变化，Angular 就会调用这些函数。</p>
+<form class="form-horizontal">
+  <div class="form-group" [formGroup]="userForm">
+    <label for="username" class="col-sm-2 control-label">用户名</label>
+    <div class="col-sm-10">
+      <input formControlName="username1" id="username1" name="username" type="text" class="form-control" placeholder="用户名">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button class="btn btn-info" (click)="showReactiveRef()">ReactiveRef</button>
+    </div>
+  </div>
+</form>
