--- a/src/app/shared-common/panel-content/panel-content.component.html
+++ b/src/app/shared-common/panel-content/panel-content.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
-    <h3 class="panel-title">Panel title</h3>
+    <h3 class="panel-title">{{name}}</h3>
   </div>
   <div class="panel-body">
     <ng-content></ng-content>
